# mojo-fireplace

./: .gitignore  MOJO_MEMORY_CONSIDERATIONS.md  README.md  WARP.md  mojo_popularity_tracking.csv  mojo_popularity_trends.html  pixi.toml  pyproject.toml
benchmarks/: bench_sortedlist.py
scripts/: concat_files.py  track_mojo_popularity.py
src/advent_of_code/: day1.md  day1.mojo  day1.py  day1_initial.py  day1_typed.py
src/black_scholes/: monte_carlo_options.mojo  monte_carlo_options.py
src/docs_person_example/: person_module.mojo  person_module_main.mojo  test_person_module.py
src/game_of_life/: README.md  benchmark_config.toml  benchmark_grid_all_versions.py  check_accelarator.mojo  gridv1.mojo  gridv1.py  gridv1_np.py  gridv2.mojo  gridv3.mojo  gridv4.mojo  gridv5.mojo  gridv6_gpu.mojo  gridv6_metal.py  life.mojo  life.py  run_grid_bench.mojo  scalar_add_checked.mojo  verify_correctness.py
src/game_of_life/docs/: GAME_OF_LIFE_ALGORITHM.md  GPU_PERFORMANCE_ANALYSIS.md  GPU_SETUP.md  METHOD_ANALYSIS.md  MOJO_VS_ALGORITHM_ANALYSIS.md  OPTIMISATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  PYTHON_INTEROP_COMPARISON.md  SCALING_ANALYSIS.md  TESTING_V4_V5.md  py_to_mojo.md
src/gpu-kernels/: README.md
src/gpu-kernels/00_setup/: README.md  check_gpu.mojo
src/gpu-kernels/01_vector_add/: README.md  bench.mojo  (+1 more)
src/levenshtein_distance/: benchmark.py  ld_benchmarks.csv  ld_list.mojo  ld_list_test.py
src/sorted_containers/: benchmark_sortedlist.py  mojo_sortedlist.mojo  mojo_sortedlist_core.mojo  mojo_sortedlist_core_main.mojo  plan.md
tests/: test_sortedlist_basic.py
(+11 files in other folders)
